home bugs squashed

--- a/assets/css/less/base.less
+++ b/assets/css/less/base.less
@@ -19,7 +19,6 @@ header {
 }
 
 #main {
-    overflow: hidden;
     width:100%;
     height: 100%;
     max-height:100%;
