--- a/assets/css/less/cover.less
+++ b/assets/css/less/cover.less
@@ -123,7 +123,6 @@
     
 
     .bio {
-        width: 500px;
         color: white;
         text-shadow: 2px 2px 12px rgba(0,0,0,0.5);
         font-size: 11px;
