--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,7 +530,6 @@ header {
   background: transparent;
 }
 #main {
-  overflow: hidden;
   width: 100%;
   height: 100%;
   max-height: 100%;
@@ -866,7 +865,6 @@ a.tag-link:hover {
   margin-top: 2px;
 }
 .cover .bio {
-  width: 500px;
   color: white;
   text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
   font-size: 11px;
